Remove sensitive configuration files (.env and config.yaml) for security compliance

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Environment variables and secrets
+.env
+*.pem
+cacerts.pem
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+
+.analyse
+.debug
+
+config.yaml
