--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,22 @@ services:
     build: .
     container_name: llm-proxy
     ports:
-      - "18000:18000"
+      - "${PORT:-18000}:${PORT:-18000}"
     volumes:
       # Mount external config file (optional, uses default if not provided)
       - ./config.yaml:/app/config.yaml:ro
       # Mount external certificate file (optional)
       - ./cacerts.pem:/app/cacerts.pem:ro
+    # Load environment variables from .env file
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
-      # Specify config file path (default: /app/config.yaml)
+      # Config file path can be overridden here if needed
       - CONFIG_PATH=/app/config.yaml
-      # Specify server host (default: 0.0.0.0)
-      - HOST=0.0.0.0
-      # Specify server port (default: 18000)
-      - PORT=18000
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:18000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-18000}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
