Rename project from "round-robin-br" to "tvs-llm-proxy" in README, pyproject.toml, and uv.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "round-robin-br"
+name = "tvs-llm-proxy"
 version = "0.1.0"
 description = "Simple Round-Robin LLM API Proxy"
 readme = "README.md"
