--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "httpx>=0.27.0",
     "urllib3>=2.6.1",
-    "dotenv>=0.9.9",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0.0",
+    "prometheus-client>=0.20.0",
 ]
