--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,12 @@ services:
     ports:
       - "${PORT:-18000}:${PORT:-18000}"
     volumes:
-      # Mount external config file (optional, uses default if not provided)
       - ./config.yaml:/app/config.yaml:ro
-      # Mount external certificate file (optional)
       - ./cacerts.pem:/app/cacerts.pem:ro
-    # Load environment variables from .env file
     env_file:
       - .env
     environment:
       - PYTHONUNBUFFERED=1
-      # Config file path can be overridden here if needed
       - CONFIG_PATH=/app/config.yaml
     restart: unless-stopped
     healthcheck:
@@ -25,3 +21,49 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+    networks:
+      - monitoring
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: llm-proxy-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    restart: unless-stopped
+    networks:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: llm-proxy-grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: unless-stopped
+    depends_on:
+      - prometheus
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: bridge
+
+volumes:
+  prometheus-data:
+  grafana-data:
