chore: Add Grafana admin user and password to environment variables template

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ MASTER_API_KEY=sk-your-master-key-here
 
 # SSL Configuration
 VERIFY_SSL=false
+
+
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
