Add comprehensive unit tests for provider service, security utilities, and streaming functionalities
- Implemented unit tests for the ProviderService class, covering initialization, provider selection, and edge cases.
- Added tests for security utilities, including master key verification and edge cases with various authorization formats.
- Developed tests for streaming utilities, ensuring proper handling of SSE chunks, streaming responses, and edge cases.
- Enhanced test coverage for model rewriting in responses and ensured robustness against malformed inputs.

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,20 @@ Thumbs.db
 logs/
 *.log
 
-.analyse
-.debug
+# Analysis and debug files
+.analyse/
+.debug/
 
+# Test and coverage
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+coverage.json
+.pytest_cache/
+.hypothesis/
+*.proptest-regressions
+
+# Config files
 config.yaml
 proxy.py.old
