--- a/rust-server/Dockerfile
+++ b/rust-server/Dockerfile
@@ -1,27 +1,39 @@
 # Multi-stage build for Rust LLM Proxy
 
-# Build stage
-FROM atm-base.artifactory.teslamotors.com/chainguard/rust:latest AS builder
+# Build stage - Use standard Rust Alpine image with build tools
+FROM rust:1.83-alpine AS builder
 
 # Install build dependencies
-RUN apk add --no-cache musl-dev openssl-dev openssl-libs-static
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tesla.cn/g' /etc/apk/repositories && \
+    apk add --no-cache musl-dev openssl-dev openssl-libs-static pkgconfig
+
 
 WORKDIR /app
+
+# Set up Cargo config to use tesla-mirrors as default registry FIRST
+RUN mkdir -p .cargo && \
+    printf '[registry]\ndefault = "tesla-mirrors"\n\n[registries.tesla-mirrors]\nindex = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > .cargo/config.toml
 
 # Copy manifests
 COPY Cargo.toml Cargo.lock* ./
 
-# Copy source code
+# Copy benches directory (needed by Cargo.toml)
+COPY benches ./benches
+
+# Create dummy source to build dependencies first (for better caching)
+RUN mkdir -p src && \
+    echo "fn main() {}" > src/main.rs && \
+    cargo build --release && \
+    rm -rf src target/release/llm-proxy-rust* target/release/deps/llm_proxy_rust*
+
+# Now copy real source code
 COPY src ./src
 
-# Build release binary
+# Build actual application
 RUN cargo build --release
 
-# Runtime stage
-FROM cndevops-base-docker-local.arf.tesla.cn/base/alpine:3.17
-
-# Install runtime dependencies
-RUN apk add --no-cache ca-certificates libgcc
+# Runtime stage - Use Chainguard Rust image
+FROM atm-base.artifactory.teslamotors.com/chainguard/rust:latest
 
 WORKDIR /app
 
