refactor: Rename all instances of 'tvs-llm-proxy' to 'llm-proxy' in documentation and configuration files

--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "tvs-llm-proxy"
+name = "llm-proxy"
 version = "0.1.0"
 description = "Simple Round-Robin LLM API Proxy"
 readme = "README.md"
