feat: add token counting functionality for fallback calculations
- Introduced `tiktoken-rs` dependency for token counting.
- Implemented `TokenCounter` struct to track input and output tokens.
- Added `calculate_message_tokens` function to compute tokens for messages.
- Updated SSE stream creation to include token counting and fallback recording.
- Enhanced existing functions to support token counting and fallback logic.
- Added tests for token counting and message token calculation.

--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "prometheus-client>=0.20.0",
     "loguru>=0.7.0",
     "limits>=3.10.0",
+    "tiktoken>=0.5.0",
 ]
 
 [project.optional-dependencies]
