feat: enhance error handling and logging for proxy requests, including client disconnects and network errors

--- a/python-server/Makefile
+++ b/python-server/Makefile
@@ -56,7 +56,7 @@ check-image:
 		exit 1; \
 	fi
 
-build-docker-image:
+docker-build:
 	@echo "Building Docker image..."
 	@BUILD_ARGS=""; \
 	if [ -n "$(ARGS_JSON)" ] && [ -f "$(ARGS_JSON)" ]; then \
