--- a/rust-server/Dockerfile
+++ b/rust-server/Dockerfile
@@ -1,21 +1,35 @@
 # Multi-stage build for Rust LLM Proxy
 
-# Build stage - Use standard Rust Alpine image with build tools
-FROM rust:1.83-alpine AS builder
+# Build stage - Use Tesla Rust Bookworm image with build tools
+FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm AS builder
+
+# Copy and use China mirror sources
+COPY debian-cn-sources.list /etc/apt/sources.list.d/debian.sources
+RUN rm -f /etc/apt/sources.list.d/debian.sources && \
+    echo "deb https://mirrors.ustc.edu.cn/debian/ bookworm main contrib non-free non-free-firmware" > /etc/apt/sources.list && \
+    echo "deb https://mirrors.ustc.edu.cn/debian/ bookworm-updates main contrib non-free non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb https://mirrors.ustc.edu.cn/debian-security/ bookworm-security main contrib non-free non-free-firmware" >> /etc/apt/sources.list
 
 # Install build dependencies
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tesla.cn/g' /etc/apk/repositories && \
-    apk add --no-cache musl-dev openssl-dev openssl-libs-static pkgconfig
+RUN apt-get update && \
+    apt-get install -y pkg-config libssl-dev && \
+    rm -rf /var/lib/apt/lists/*
 
+
+
+# Set up Cargo config to use tesla-mirrors as default registry FIRST (before WORKDIR)
+RUN mkdir -p ${CARGO_HOME:-/usr/local/cargo} && \
+    printf '[registry]\ndefault = "tesla-mirrors"\n\n[registries.tesla-mirrors]\nindex = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > ${CARGO_HOME:-/usr/local/cargo}/config.toml && \
+    cat ${CARGO_HOME:-/usr/local/cargo}/config.toml
 
 WORKDIR /app
 
-# Set up Cargo config to use tesla-mirrors as default registry FIRST
+# Also create project-level cargo config as backup
 RUN mkdir -p .cargo && \
     printf '[registry]\ndefault = "tesla-mirrors"\n\n[registries.tesla-mirrors]\nindex = "sparse+https://mirrors.tesla.cn/cargo/index/"\n' > .cargo/config.toml
 
-# Copy manifests
-COPY Cargo.toml Cargo.lock* ./
+# Copy manifests (Cargo.lock will be regenerated with mirror source)
+COPY Cargo.toml ./
 
 # Copy benches directory (needed by Cargo.toml)
 COPY benches ./benches
@@ -26,8 +40,8 @@ COPY src ./src
 # Build release binary
 RUN cargo build --release
 
-# Runtime stage - Use Chainguard Rust image
-FROM atm-base.artifactory.teslamotors.com/chainguard/rust:latest
+# Runtime stage - Use Tesla Rust Bookworm image
+FROM atm-base.artifactory.teslamotors.com/rust:1.85-bookworm
 
 WORKDIR /app
 
