--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -12,6 +12,7 @@ tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
 
 # HTTP client
 reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
+bytes = "1.5"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -53,6 +54,9 @@ nonzero_ext = "0.3"
 
 # Token counting
 tiktoken-rs = "0.5"
+
+# Lazy static initialization
+lazy_static = "1.4"
 
 [dev-dependencies]
 # Testing framework
