feat: Dynamic configuration mode

--- a/python-server/.env.example
+++ b/python-server/.env.example
@@ -1,31 +1,26 @@
-# LLM Proxy Environment Variables Template
+# LLM Proxy Environment Variables (Python Server)
 # Copy this file to .env and fill in your actual values
 # DO NOT commit .env to version control!
 
-# API Keys for each provider
-API_KEY_0=your-api-key-0-here
-API_KEY_1=your-api-key-1-here
-API_KEY_2=your-api-key-2-here
-API_KEY_3=your-api-key-3-here
+# =============================================================================
+# REQUIRED
+# =============================================================================
 
-# API Base URL (shared by all providers)
-API_BASE_URL=https://inference.bottlerocket.tesla.com/models/claude-4/v1
+# PostgreSQL connection string for dynamic configuration
+# Format: postgresql://user:password@host:port/database?sslmode=disable
+# Special characters in password are automatically URL-encoded by the server.
+DB_URL=postgresql://llm_proxy:password@localhost:5432/llm_proxy?sslmode=disable
 
-# Model ARNs
-MODEL_ARN_SONNET_45=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/24quy30gs8jc
-MODEL_ARN_HAIKU_45=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/63ybopyqov8m
-MODEL_ARN_OPUS_41=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/c1hq7ugb2v6j
-MODEL_ARN_OPUS_4=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/jcugtwf9ktzo
-MODEL_ARN_SONNET_4=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/474hi74eqmoc
+# Admin API authentication key
+# Used to authenticate requests to /admin/v1/* endpoints
+ADMIN_KEY=your-secure-admin-key-here
 
-# Server Configuration
-HOST=0.0.0.0
+# =============================================================================
+# OPTIONAL
+# =============================================================================
+
+# Server port (default: 18000)
 PORT=18000
-MASTER_API_KEY=sk-your-master-key-here
 
-# SSL Configuration
-VERIFY_SSL=false
-
-
-GRAFANA_ADMIN_USER=admin
-GRAFANA_ADMIN_PASSWORD=admin
+# Log level: debug, info, warning, error (default: info)
+LOG_LEVEL=info
