--- a/rust-server/.env.example
+++ b/rust-server/.env.example
@@ -1,69 +1,29 @@
-# LLM Proxy Environment Variables Template (Rust Server)
+# LLM Proxy Environment Variables (Rust Server)
 # Copy this file to .env and fill in your actual values
 # DO NOT commit .env to version control!
 
 # =============================================================================
-# API KEYS
+# REQUIRED
 # =============================================================================
-# API keys for each provider. These will be used in config.yaml via ${API_KEY_N}
-API_KEY_0=your-api-key-0-here
-API_KEY_1=your-api-key-1-here
-API_KEY_2=your-api-key-2-here
-API_KEY_3=your-api-key-3-here
+
+# PostgreSQL connection string for dynamic configuration
+# Format: postgresql://user:password@host:port/database?sslmode=disable
+# Special characters in password are automatically URL-encoded by the server.
+DB_URL=postgresql://llm_proxy:password@localhost:5432/llm_proxy?sslmode=disable
+
+# Admin API authentication key
+# Used to authenticate requests to /admin/v1/* endpoints
+ADMIN_KEY=your-secure-admin-key-here
 
 # =============================================================================
-# API BASE URL
+# OPTIONAL
 # =============================================================================
-# Base URL shared by all providers (or use different URLs per provider)
-API_BASE_URL=https://inference.bottlerocket.tesla.com/models/claude-4/v1
 
-# =============================================================================
-# MODEL ARNS
-# =============================================================================
-# Model ARNs for different Claude models
-MODEL_ARN_SONNET_45=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/24quy30gs8jc
-MODEL_ARN_HAIKU_45=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/63ybopyqov8m
-MODEL_ARN_OPUS_41=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/c1hq7ugb2v6j
-MODEL_ARN_OPUS_4=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/jcugtwf9ktzo
-MODEL_ARN_SONNET_4=arn:aws:bedrock:us-east-1:603947095197:application-inference-profile/474hi74eqmoc
+# Server port (default: 17999)
+PORT=17999
 
-# =============================================================================
-# SERVER CONFIGURATION
-# =============================================================================
-# Host to bind to (0.0.0.0 for all interfaces, 127.0.0.1 for localhost only)
-HOST=0.0.0.0
-
-# Port to listen on
-PORT=18000
-
-# Master API key for authentication (optional)
-# If set, clients must provide this key in the Authorization header
-# Leave empty or unset to disable authentication
-MASTER_API_KEY=sk-your-master-key-here
-
-# =============================================================================
-# SSL CONFIGURATION
-# =============================================================================
-# Whether to verify SSL certificates for upstream requests
-# Set to false for self-signed certificates or testing
-# Accepts: true, false, 1, 0, yes, no, on, off (case-insensitive)
-VERIFY_SSL=false
-
-# =============================================================================
-# LOGGING CONFIGURATION
-# =============================================================================
-# Log level: trace, debug, info, warn, error
-# Can be overridden with RUST_LOG environment variable
+# Log level: trace, debug, info, warn, error (default: info)
 LOG_LEVEL=info
 
-# =============================================================================
-# ADVANCED CONFIGURATION
-# =============================================================================
-# Request timeout in seconds (optional)
-# REQUEST_TIMEOUT=30
-
-# Maximum concurrent requests per provider (optional)
-# MAX_CONCURRENT_REQUESTS=100
-
-# Connection pool size (optional)
-# CONNECTION_POOL_SIZE=10
+# Rust-specific log configuration (overrides LOG_LEVEL if set)
+# RUST_LOG=info
