--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.110.0",
     "uvicorn>=0.27.0",
-    "pyyaml>=0.6.1",
     "httpx>=0.27.0",
     "urllib3>=2.6.1",
     "python-dotenv>=1.0.0",
@@ -16,6 +15,8 @@ dependencies = [
     "loguru>=0.7.0",
     "limits>=3.10.0",
     "tiktoken>=0.5.0",
+    "sqlalchemy[asyncio]>=2.0.25",
+    "asyncpg>=0.30.0",
 ]
 
 [project.optional-dependencies]
