--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -17,11 +17,10 @@ bytes = "1.5"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_yaml = "0.9"
 
 # Configuration
 config = "0.14"
-dotenv = "0.15"
+dotenvy = "0.15"
 
 # Logging
 tracing = "0.1"
@@ -58,6 +57,23 @@ tiktoken-rs = "0.5"
 # Lazy static initialization
 lazy_static = "1.4"
 
+# Database (PostgreSQL)
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }
+
+# Hot reload with ArcSwap
+arc-swap = "1.7"
+
+# Hashing for key storage
+sha2 = "0.10"
+hex = "0.4"
+
+# Time handling
+chrono = { version = "0.4", features = ["serde"] }
+
+# OpenAPI/Swagger documentation
+utoipa = { version = "5", features = ["axum_extras", "chrono"] }
+utoipa-swagger-ui = { version = "8", features = ["axum"] }
+
 [dev-dependencies]
 # Testing framework
 tokio-test = "0.4"
@@ -79,12 +95,6 @@ serial_test = "3.0"
 assert_matches = "1.5"
 pretty_assertions = "1.4"
 
-# Benchmarking
-criterion = { version = "0.5", features = ["html_reports"] }
-
-# Profiling
-pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
-
 # Coverage
 # Run with: cargo tarpaulin --out Html --output-dir coverage
 # Install with: cargo install cargo-tarpaulin
@@ -98,11 +108,3 @@ strip = true
 [profile.test]
 opt-level = 0
 debug = true
-
-[[bench]]
-name = "provider_selection"
-harness = false
-
-[[bench]]
-name = "request_handling"
-harness = false
