fix deploy issue

--- a/python-server/Dockerfile
+++ b/python-server/Dockerfile
@@ -1,8 +1,6 @@
 # Use Python 3.12 slim image
 FROM --platform=linux/amd64 cndevops-base-docker-local.arf.tesla.cn/base/python:3.12-alpine
 
-
-
 # Set working directory
 WORKDIR /app
 
@@ -15,21 +13,17 @@ COPY uv.lock ./
 COPY main.py ./
 COPY app/ ./app/
 
-# Copy default config and certificate if they exist
+# Copy certificate if it exists
 COPY . /tmp/build/
-RUN if [ -f /tmp/build/config.yaml ]; then cp /tmp/build/config.yaml ./config.yaml; fi && \
-    if [ -f /tmp/build/cacerts.pem ]; then cp /tmp/build/cacerts.pem ./cacerts.pem; fi && \
+RUN if [ -f /tmp/build/cacerts.pem ]; then cp /tmp/build/cacerts.pem ./cacerts.pem; fi && \
     rm -rf /tmp/build
 
 # Install dependencies using uv
 RUN uv sync --frozen
 
-# Expose port (default 8000, can be overridden by config)
+# Expose port (default 18000)
 EXPOSE 18000
 
-# Set default config path (can be overridden by environment variable)
-ENV CONFIG_PATH=/app/config.yaml
-
 # Run the application
-# Can be overridden in docker-compose or docker run with custom config path
-CMD ["sh", "-c", "uv run python main.py --config=${CONFIG_PATH}"]
+# Configuration is loaded from database via DB_URL environment variable
+CMD ["uv", "run", "python", "main.py"]
