--- a/python-server/docker-compose.yml
+++ b/python-server/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   llm-proxy:
@@ -7,13 +7,11 @@ services:
     ports:
       - "${PORT:-18000}:${PORT:-18000}"
     volumes:
-      - ./config.yaml:/app/config.yaml:ro
       - ./cacerts.pem:/app/cacerts.pem:ro
     env_file:
       - .env
     environment:
       - PYTHONUNBUFFERED=1
-      - CONFIG_PATH=/app/config.yaml
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${PORT:-18000}/health"]
@@ -33,10 +31,10 @@ services:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus-data:/prometheus
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
+      - "--web.console.templates=/usr/share/prometheus/consoles"
     restart: unless-stopped
     networks:
       - monitoring
