--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -22,6 +22,9 @@ serde_json = "1.0"
 config = "0.14"
 dotenvy = "0.15"
 
+# Pin home crate to version compatible with Rust 1.85
+home = "=0.5.9"
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
