--- a/web/react-admin/.env.example
+++ b/web/react-admin/.env.example
@@ -1,2 +1,2 @@
 # API Configuration
-VITE_API_BASE_URL=http://127.0.0.1:17999
+VITE_PUBLIC_API_BASE_URL=http://tvs-llm-proxy-rs.cn-pvg06-eng-r1-general.k8s.tesla.com
