--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/adapter-node": "^5.2.0",
     "@sveltejs/kit": "^2.49.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/forms": "^0.5.11",
