feat: add PROVIDER_SUFFIX support for model name prefix stripping
Add optional PROVIDER_SUFFIX environment variable that allows users to
use model names in format "{PROVIDER_SUFFIX}/{model}" or "{model}".

When PROVIDER_SUFFIX is set (e.g., "Proxy"), model names like "Proxy/gpt-4"
are automatically stripped to "gpt-4" for provider selection and mapping.

Changes:
- Python: Add provider_suffix config and _strip_provider_suffix() in completions.py
- Rust: Add provider_suffix config and strip_provider_suffix() in handlers.rs
- Add comprehensive tests for both implementations
- Update documentation in Agents.md, README files, and .env.example files

This enables compatibility with clients that prefix model names with a
namespace identifier.

--- a/python-server/.env.example
+++ b/python-server/.env.example
@@ -24,3 +24,7 @@ PORT=18000
 
 # Log level: debug, info, warning, error (default: info)
 LOG_LEVEL=info
+
+# Optional model name prefix (e.g., "Proxy")
+# When set, model names like "Proxy/gpt-4" are treated as "gpt-4"
+# PROVIDER_SUFFIX=Proxy
