--- a/rust-server/.env.example
+++ b/rust-server/.env.example
@@ -27,3 +27,7 @@ LOG_LEVEL=info
 
 # Rust-specific log configuration (overrides LOG_LEVEL if set)
 # RUST_LOG=info
+
+# Optional model name prefix (e.g., "Proxy")
+# When set, model names like "Proxy/gpt-4" are treated as "gpt-4"
+# PROVIDER_SUFFIX=Proxy
