--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -12,9 +12,10 @@
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,json,md}\""
   },
   "dependencies": {
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
