--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -36,5 +36,8 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.19.0",
     "vite": "^7.3.0"
+  },
+  "dependencies": {
+    "lucide-svelte": "^0.468.0"
   }
 }
