integrate grafana board into admin ui

--- a/web/svelte-admin/Dockerfile
+++ b/web/svelte-admin/Dockerfile
@@ -12,6 +12,9 @@ COPY . .
 ARG VITE_PUBLIC_API_BASE_URL=http://127.0.0.1:18000
 ENV VITE_PUBLIC_API_BASE_URL=${VITE_PUBLIC_API_BASE_URL}
 
+ARG PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
+ENV PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=${PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL}
+
 RUN pnpm build
 
 FROM cndevops-base-docker-local.arf.tesla.cn/base/node:20-alpine AS runner
