--- a/web/svelte-admin/.env.example
+++ b/web/svelte-admin/.env.example
@@ -1,2 +1,7 @@
 # API Configuration
 VITE_PUBLIC_API_BASE_URL=http://127.0.0.1:18000
+
+# Grafana Public Dashboard URL (optional)
+# Create a public dashboard in Grafana and paste the URL here
+# See: https://grafana.com/docs/grafana/latest/dashboards/dashboard-public/
+PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
