fix(chat): improve markdown rendering styles and list markers
Align React/Svelte markdown CSS (ul/ol bullets, nesting, headings, kbd, pre whitespace)
Ensure list markers display correctly in chat bubbles (list-inside + li::marker)
Update chat feature docs to reference /v1/models backend and refresh timestamp

--- a/web/react-admin/.env.example
+++ b/web/react-admin/.env.example
@@ -1,2 +1,6 @@
 # API Configuration
 VITE_PUBLIC_API_BASE_URL=http://tvs-llm-proxy-rs.cn-pvg06-eng-r1-general.k8s.tesla.com
+
+# Chat (optional)
+# Comma-separated model prefixes allowed to use image input (e.g., grok-4,grok-3)
+VITE_CHAT_VISION_MODEL_ALLOWLIST=grok-4,grok-3
