--- a/web/react-admin/Dockerfile
+++ b/web/react-admin/Dockerfile
@@ -15,6 +15,9 @@ ENV VITE_PUBLIC_API_BASE_URL=${VITE_PUBLIC_API_BASE_URL}
 ARG VITE_PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
 ENV VITE_PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=${VITE_PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL}
 
+ARG VITE_CHAT_VISION_MODEL_ALLOWLIST=
+ENV VITE_CHAT_VISION_MODEL_ALLOWLIST=${VITE_CHAT_VISION_MODEL_ALLOWLIST}
+
 
 RUN pnpm build
 
