--- a/web/svelte-admin/.env.example
+++ b/web/svelte-admin/.env.example
@@ -5,3 +5,7 @@ VITE_PUBLIC_API_BASE_URL=http://127.0.0.1:18000
 # Create a public dashboard in Grafana and paste the URL here
 # See: https://grafana.com/docs/grafana/latest/dashboards/dashboard-public/
 PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
+
+# Chat (optional)
+# Comma-separated model prefixes allowed to use image input (e.g., grok-4,grok-3)
+VITE_CHAT_VISION_MODEL_ALLOWLIST=grok-4,grok-3
