--- a/web/svelte-admin/Dockerfile
+++ b/web/svelte-admin/Dockerfile
@@ -15,6 +15,9 @@ ENV VITE_PUBLIC_API_BASE_URL=${VITE_PUBLIC_API_BASE_URL}
 ARG PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=
 ENV PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL=${PUBLIC_GRAFANA_PUBLIC_DASHBOARD_URL}
 
+ARG VITE_CHAT_VISION_MODEL_ALLOWLIST=
+ENV VITE_CHAT_VISION_MODEL_ALLOWLIST=${VITE_CHAT_VISION_MODEL_ALLOWLIST}
+
 RUN pnpm build
 
 FROM cndevops-base-docker-local.arf.tesla.cn/base/node:20-alpine AS runner
