--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -38,6 +38,8 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
-    "lucide-svelte": "^0.468.0"
+    "isomorphic-dompurify": "^2.35.0",
+    "lucide-svelte": "^0.468.0",
+    "marked": "^17.0.1"
   }
 }
