--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,json,md}\""
   },
   "dependencies": {
+    "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.513.0",
     "marked": "^17.0.1",
