--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -38,6 +38,7 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
+    "highlight.js": "^11.11.1",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-svelte": "^0.468.0",
     "marked": "^17.0.1"
