--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -18,7 +18,8 @@
     "marked": "^17.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
