--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "prepare": "node ../../scripts/install-githooks.mjs",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
