--- a/web/react-admin/package.json
+++ b/web/react-admin/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "prepare": "node ../../scripts/install-githooks.mjs",
+    "prepare": "(node ../../scripts/install-githooks.mjs 2>/dev/null || true)",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
