--- a/web/svelte-admin/package.json
+++ b/web/svelte-admin/package.json
@@ -7,7 +7,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "svelte-kit sync || echo '' && node ../../scripts/install-githooks.mjs",
+    "prepare": "svelte-kit sync || echo '' && (node ../../scripts/install-githooks.mjs 2>/dev/null || true)",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
