feat(langfuse): add Langfuse observability integration for LLM tracing
Add optional Langfuse integration to both Python and Rust servers for
comprehensive LLM observability including traces, generations, and metrics.

Rust Server:
- Add LangfuseService with proper API event structure (id, timestamp, type, body)
- Implement update_trace_provider() for provider info and tags
- Extract client metadata (user-agent, x-forwarded-for, x-real-ip, origin, referer)
- Add tags for endpoint, credential, user-agent, provider, model
- Add provider_type field to GenerationData
- Align endpoint tag format to /v1/chat/completions

Python Server:
- Add LangfuseService with create_trace(), update_trace_provider(), create_generation()
- Add client_metadata parameter extraction from request headers
- Add tags for endpoint, credential, user-agent
- Support sampling rate and background batching for minimal latency impact

Both servers support:
- TTFT (Time to First Token) tracking for streaming requests
- Token usage metrics (prompt, completion, total)
- Provider and model tagging for analytics
- Configurable via environment variables (LANGFUSE_ENABLED, etc.)

Documentation:
- Update README files with Langfuse configuration section
- Add .env.example files with Langfuse environment variables
- Update AGENTS.md with Langfuse feature documentation

--- a/python-server/.env.example
+++ b/python-server/.env.example
@@ -28,3 +28,31 @@ LOG_LEVEL=info
 # Optional model name prefix (e.g., "Proxy")
 # When set, model names like "Proxy/gpt-4" are treated as "gpt-4"
 # PROVIDER_SUFFIX=Proxy
+
+# =============================================================================
+# LANGFUSE OBSERVABILITY (OPTIONAL)
+# =============================================================================
+
+# Enable Langfuse tracing (default: false)
+# LANGFUSE_ENABLED=true
+
+# Langfuse public key (required when LANGFUSE_ENABLED=true)
+# Get from: https://cloud.langfuse.com -> Project Settings -> API Keys
+# LANGFUSE_PUBLIC_KEY=pk-lf-...
+
+# Langfuse secret key (required when LANGFUSE_ENABLED=true)
+# LANGFUSE_SECRET_KEY=sk-lf-...
+
+# Langfuse server URL (default: https://cloud.langfuse.com)
+# Use this for self-hosted Langfuse instances
+# LANGFUSE_HOST=https://cloud.langfuse.com
+
+# Sampling rate 0.0-1.0 (default: 1.0)
+# Set to lower value for high-traffic scenarios
+# LANGFUSE_SAMPLE_RATE=1.0
+
+# Flush interval in seconds (default: 5)
+# LANGFUSE_FLUSH_INTERVAL=5
+
+# Enable debug logging for Langfuse (default: false)
+# LANGFUSE_DEBUG=false
