--- a/python-server/pyproject.toml
+++ b/python-server/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "tiktoken>=0.5.0",
     "sqlalchemy[asyncio]>=2.0.25",
     "asyncpg>=0.30.0",
+    "langfuse>=2.0.0",
 ]
 
 [project.optional-dependencies]
