feat(rust-server): add tiered logging with DEBUG summary and TRACE full payload
- Add DEBUG level logging for request/response summaries (messages_count, finish_reason)
- Add TRACE level logging for full JSON payloads with size (payload_bytes, response_bytes)
- Support NO_COLOR env var to disable ANSI codes for file logging
- Filter hyper/reqwest logs to warn level to reduce noise
- Add Makefile targets: dev-trace, dev-log, dev-trace-log

--- a/rust-server/Makefile
+++ b/rust-server/Makefile
@@ -4,15 +4,19 @@
 
 help:
 	@echo "Available targets:"
-	@echo "  build        - Build release binary"
-	@echo "  run          - Run the application"
-	@echo "  test         - Run tests"
-	@echo "  check        - Check code without building"
-	@echo "  fmt          - Format code"
-	@echo "  clippy       - Run clippy linter"
-	@echo "  clean        - Clean build artifacts"
-	@echo "  docker-build - Build Docker image"
-	@echo "  docker-run   - Run Docker container"
+	@echo "  build          - Build release binary"
+	@echo "  run            - Run the application"
+	@echo "  test           - Run tests"
+	@echo "  check          - Check code without building"
+	@echo "  fmt            - Format code"
+	@echo "  clippy         - Run clippy linter"
+	@echo "  clean          - Clean build artifacts"
+	@echo "  docker-build   - Build Docker image"
+	@echo "  docker-run     - Run Docker container"
+	@echo "  dev            - Run with debug logging (summary only)"
+	@echo "  dev-trace      - Run with trace logging (full payloads)"
+	@echo "  dev-log        - Run with debug logging to file"
+	@echo "  dev-trace-log  - Run with trace logging to file"
 
 build:
 	cargo build --release
@@ -47,6 +51,18 @@ docker-run:
 # Development targets
 dev:
 	RUST_LOG=debug cargo run
+
+# Development with trace level (full request/response payloads)
+dev-trace:
+	RUST_LOG=trace cargo run
+
+# Development with log file (no ANSI colors)
+dev-log:
+	RUST_LOG=debug NO_COLOR=1 cargo run 2>&1 | tee debug.log
+
+# Development with trace level log file
+dev-trace-log:
+	RUST_LOG=trace NO_COLOR=1 cargo run 2>&1 | tee trace.log
 
 watch:
 	cargo watch -x run
