feat: add V2 cross-protocol transformation API with transformer pipeline
- Implement 4-hook transformer pipeline for bidirectional protocol conversion
  - Support OpenAI, Anthropic, and Response API protocols
  - Add Unified Internal Format (UIF) as protocol-agnostic intermediate layer
  - Same-protocol bypass optimization for minimal overhead

- Add V2 API endpoints with cross-protocol support
  - POST /v2/chat/completions (OpenAI-compatible)
  - POST /v2/messages (Anthropic-compatible)
  - POST /v2/responses (Response API)

- Add JSONL logging for request/response debugging
  - Async buffered writes with periodic flushing
  - Configurable via JSONL_LOG_* environment variables

- Add bypass and cross-protocol metrics for observability
  - bypass_requests_total, bypass_streaming_bytes_total
  - cross_protocol_requests_total with protocol labels

- Implement Response API converter for bidirectional conversion

- Update documentation with transformer architecture diagrams

--- a/rust-server/Dockerfile
+++ b/rust-server/Dockerfile
@@ -32,6 +32,7 @@ RUN mkdir -p .cargo && \
 COPY Cargo.toml Cargo.lock ./
 
 # Copy benches directory (needed by Cargo.toml)
+COPY benches ./benches
 
 # Copy source code
 COPY src ./src
