--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -98,6 +98,9 @@ serial_test = "3.0"
 assert_matches = "1.5"
 pretty_assertions = "1.4"
 
+# Benchmarking
+criterion = { version = "0.5", features = ["html_reports"] }
+
 # Coverage
 # Run with: cargo tarpaulin --out Html --output-dir coverage
 # Install with: cargo install cargo-tarpaulin
@@ -111,3 +114,14 @@ strip = true
 [profile.test]
 opt-level = 0
 debug = true
+
+# Benchmark profile
+[profile.bench]
+opt-level = 3
+lto = true
+codegen-units = 1
+
+# Benchmark configuration
+[[bench]]
+name = "transformer_bench"
+harness = false
